correção de env